<resources>
    <string name="app_name">Dulhaniyaa Business</string>

    <string name="app_motive">The Stress Free Way to Plan Your Wedding</string>

    <string name="release_key">AIzaSyCuX1n-tGkrylUcT2-TxG8Bb_1sCYyG6Cg</string>

    <string name="facebook_app_id">516217058775242</string>
    <string name="fb_login_protocol_scheme">fb516217058775242</string>

    <!--<string name="facebook_app_id">609601056058486</string>-->
    <!--<string name="fb_login_protocol_scheme">fb609601056058486</string>-->

    <!--for gender on radio button-->
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="btn_signup">gender</string>

    <string name="by_continue">By continuing, you agree to our</string>
    <string name="term">Terms of Service </string>
    <string name="privacy_policy"> Privacy Policy</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="Or_login_with_ur_email">OR LOGIN WITH YOUR EMAIL</string>
    <string name="forget_password">Forget Password?</string>
    <string name="Not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_with_email">OR SIGN UP WITH EMAIL</string>
    <string name="already_a_member">Already a member? Log In.</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_as_a_vender">Sign up as a vendor</string>

    <string name="email_phone">Email or Phone Number</string>
    <string name="pass">Password</string>
    <string name="remember">Remember Me</string>

    <string name="first_fragment_1">Get inspired from over</string>
    <string name="first_fragment_2">50,000 wedding photos</string>

    <string name="second_fragment_1">Find the right wedding vender for you</string>
    <string name="second_fragment_2">Thousands of trusted reviews.</string>
    <string name="third_fragment_1">Team up with your loved ones</string>
    <string name="third_fragment_2">to plan your wedding</string>
    <string name="title_activity_option__menu">Option_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom__nav">Bottom_Nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tab">Tab</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="dulhaniyaa_inspiration">Dulhaniyaa Inspiration</string>
    <string name="real_wedding">Real Wedding</string>
    <string name="blogs">Blogs</string>

    <string name="inspiration">Inspiration</string>
    <string name="my_wedding">My Wedding</string>
    <string name="venders">Venders</string>


    <!--  Reference from Some Where -->


    <string name="debug_key">AIzaSyB2ndaNge2FJH-yiHsrnnDboheojI88Ix0</string>

    <string name="debug_map_key4">AIzaSyA_WGFU0BAUHvL2BKbOl0I4ZI9-c99Yofk</string>

    <string name="gen_pass">Generated Password</string>
    <string name="f_pass">Forgot Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_account">Don\'t have an Account ? <b>SIGN UP</b> </string>

    <string name="agree_to_term">By signing up, you agree to <b> Terms of Service \n </b> &amp; <b>Privacy Policy</b> </string>
    <string name="sign_in1">Already have an Account? <b>LOGIN </b></string>

    <string name="phone">Phone Number</string>
    <string name="c_pass">Confirm Password</string>

    <string name="enter_your_otp">Enter the 4 digit OTP  recieved on your \n registered mobile number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_map">Map</string>

    <string name="account">Account</string>
    <string name="priv">Privacy Settings</string>
    <string name="edit_acc">Edit Account</string>
    <string name="edit_pro">Edit Profile</string>
    <string name="setting">Settings</string>
    <string name="lin_acc">Linked Account</string>
    <string name="push">Push Notification</string>
    <string name="save_org">Save Original Photos</string>
    <string name="support">Support</string>
    <string name="helo_cent">Help Center</string>
    <string name="report">Report a Problem</string>
    <string name="about">About</string>
    <string name="policy">Privacy Policy</string>
    <string name="open_source">Open Source Libraries</string>
    <string name="clear_search">Clear Search History</string>
    <string name="add_acc">Add Account</string>

    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="f_passs">Forgot Password</string>
    <string name="email_conta">E-mail</string>
    <string name="forgert_pas_text">Enter Registered Contact Number/E-mail \n Address and click  on send button</string>
    <string name="logout">Logout</string>
    <string name="review"> <u>32 reviews</u> </string>
    <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Menu -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
    <string name="menu_text">LoremIpsum is simply dummy text of the printing and typesetting
    industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s when an unknown printer took
        a gallery of type and.
    </string>
    <string name="home">Home</string>
    <string name="add_nto_cart">Cart</string>
    <string name="no_data_found">No Data Found</string>
    <string name="filter">Filter</string>
    <string name="food">Food</string>
    <string name="minus">Minus</string>
    <string name="_0">0</string>
    <string name="plus">Plus</string>
    <string name="_20">$ 20</string>
    <string name="loremipsum_is_simply_a_dummy_text_of_printing_and_typesetting_industry">LoremIpsum is simply a dummy text of printing and typesetting industry.It has been the industry standard dummy text.</string>
    <string name="pasta">Pasta</string>
    <string name="logo">Logo</string>
    <string name="quaker_oat_so_simple_porridge">Quaker Oat So Simple Porridge</string>
    <string name="_09">09</string>

    <!--<string name="app_id">147132682554581</string>-->
    <string name="app_id">1609468389090342</string>
    <string name="mpesaprocess">"Please wait while your transaction \n is processing</string>
    <string name="title_activity_dulhaniyaa_inspiration">DulhaniyaaInspiration</string>
    <string name="title_activity_dulhaniyaa_drawer">DulhaniyaaDrawer</string>

    <string name="write_a_review">I would definitely recommend this venue for any occasion be it a wedding or a birthday party. The staff is really cooperative, even the owner Mr. Himanshu works day and night to make your event successful. I don?t think you can get a better option for an event in Chandigarh. The food is awesome, they have great variety in food options. If you are organizing your event at Redwood you don?t have to worry for anything, your event will surely be a great event.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="email_update">Email \n (To edit these fields, contact us on vendors@dulhaniyaa.com)</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="share_whatsapp_not_instaled">share_whatsapp</string>
    <string name="share_intent_title">share_intent_title</string>
    <string name="save">Save</string>
    <string name="message_here">Your Message Here...</string>

</resources>