<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:elevation="@dimen/dp_5"
        android:background="@color/colorAccent"
        android:theme="@style/AppTheme.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_20"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/text_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_toolbar_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Reset"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:padding="@dimen/dp_15"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sp_40"
            android:gravity="center"
            android:text="@string/forgert_pas_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />


        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_45"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@color/colorAccent"
            android:drawablePadding="@dimen/sp_10"
            android:hint="@string/email_conta"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/sp_15"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="@dimen/dp_190"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@color/colorAccent"
            android:text="SEND"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

</LinearLayout>